<resources>
    <string name="app_name">Assignment03</string>
    <string name="fa_check">\uf14a</string>
    <string name="fa_dropdown">\uf0d7</string>
    <string name="fa_search">\uf002</string>
    <string name="fa_more">\uf142</string>
    <string name="fa_back">\uf048</string>
    <string name="fa_calendar">\uf073</string>
    <string name="fa_list">\uf03a</string>
    <string name="add_details_task">Add details task</string>
    <string name="task_view">Task View</string>
    <string name="date_and_time">date and time</string>
    <string name="task_type">Task type</string>
    <string name="fa_edit">\uf4ff</string>
    <string name="date_not_set">Date not set</string>
</resources>
