<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:background="@color/background_app"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <!-- Header with back button and title -->
    <LinearLayout
        android:id="@+id/Header_Row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/top_rowcolour"
        android:orientation="horizontal"
        android:padding="10dp"
        android:layout_marginTop="@dimen/app_margin_top"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/icon_check"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:backgroundTint="@color/top_rowcolour"
            android:text="@string/fa_check"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:fontFamily="@font/fa_solid_900"
            android:layout_marginEnd="8dp"
            android:padding="0dp"
            />

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:textSize="@dimen/main_textsize"
            android:text="All Lists"
            android:gravity="center_vertical"/>

        <Button
            android:id="@+id/icon_dropdown"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:backgroundTint="@color/top_rowcolour"
            android:text="@string/fa_dropdown"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:fontFamily="@font/fa_solid_900"
            android:layout_marginEnd="16dp"
            android:padding="0dp"
            />

        <Button
            android:id="@+id/icon_search"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:backgroundTint="@color/top_rowcolour"
            android:text="@string/fa_search"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:fontFamily="@font/fa_solid_900"
            android:layout_marginEnd="16dp"
            android:padding="0dp"
            />

        <Button
            android:id="@+id/icon_more"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:backgroundTint="@color/top_rowcolour"
            android:text="@string/fa_more"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:fontFamily="@font/fa_solid_900"
            android:padding="0dp"
            />
    </LinearLayout>

    <!-- RecyclerView for displaying current Todos -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/firstRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="3dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintTop_toBottomOf="@id/Header_Row"
        app:layout_constraintBottom_toTopOf="@id/quiq_row"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:listitem="@layout/text_row_items" />

    <!-- Add Task Input Field and Button -->
    <LinearLayout
        android:id="@+id/quiq_row"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">


    </LinearLayout>
    <!-- Floating Action Button to Add Task -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="65dp"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="@color/white"
        app:srcCompat="@drawable/images01"
        android:contentDescription="Add a Task" />
</androidx.constraintlayout.widget.ConstraintLayout>
