<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_app"
    android:orientation="vertical">

    <!-- Header with back button and title -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/top_rowcolour"
        android:gravity="center_vertical">

        <Button
            android:text="@string/fa_back"
            android:id="@+id/backButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:backgroundTint="@color/top_rowcolour"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:fontFamily="@font/fa_solid_900"
            android:layout_marginEnd="8dp"
            android:padding="0dp" />

        <TextView
            android:id="@+id/headerTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New Task"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold"/>
    </LinearLayout>

    <!-- Task title input -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:background="@color/background_app">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="What is to be done?"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:layout_marginTop="16dp" />

        <EditText
            android:id="@+id/edit_task"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="Enter Task Here"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="16sp"
            android:padding="12dp"
            android:background="@drawable/item_background"
            android:inputType="text"
            android:singleLine="true" />
    </LinearLayout>

    <!-- Notes input -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:background="@color/background_app">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Notes"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:layout_marginTop="16dp" />

        <EditText
            android:id="@+id/edit_notes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Enter Notes Here"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="16sp"
            android:padding="12dp"
            android:background="@drawable/item_background"
            android:inputType="textMultiLine"
            android:minLines="3" />
    </LinearLayout>

    <!-- Due date input -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:background="@color/background_app">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Due Date"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:layout_marginTop="16dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:background="@drawable/item_background"
            android:padding="8dp">


            <TextView
                android:id="@+id/textViewDueDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="12dp"
                android:text="@string/date_not_set"
                android:textColor="@android:color/white"
                android:textSize="16sp" />
            <CalendarView
                android:id="@+id/calendarView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:elevation="8dp"
                android:layout_gravity="center"
                />
            <Button
                android:id="@+id/iconCalendar"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:text="@string/fa_calendar"
                android:backgroundTint="@color/top_rowcolour"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                android:fontFamily="@font/fa_solid_900"
                android:layout_marginEnd="8dp"
                android:padding="0dp" />

        </LinearLayout>
        <Switch
            android:id="@+id/switch_due_date"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="Set Due Date"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:layout_marginTop="8dp"
            android:minHeight="48dp"
            android:padding="8dp"/>
    </LinearLayout>

    <!-- Mark as completed -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_app"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- Task Type Section -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Task Type"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/spinner_task_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:spinnerMode="dropdown"
            android:background="@color/top_rowcolour"
            android:padding="12dp" />

    </LinearLayout>


    <!-- Save, Delete, and Cancel buttons -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="16dp">

        <Button
            android:id="@+id/updateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Update"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:fontFamily="@font/fa_solid_900"
            android:layout_marginEnd="8dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/top_rowcolour"/>

        <Button
            android:id="@+id/deleteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Delete"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:fontFamily="@font/fa_solid_900"
            android:layout_marginEnd="8dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/top_rowcolour"/>

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Cancel"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:fontFamily="@font/fa_solid_900"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/top_rowcolour"/>
    </LinearLayout>

</LinearLayout>
